--- a/client/index.html
+++ b/client/index.html
@@ -14,13 +14,13 @@
         <br />
 
         <label for="name">Name</label>
-        <input type="text" id="name" required>
+        <input type="text" id="name" >
 
         <label for="goal">Goal</label>
-        <input type="text" id="goal" required>
+        <input type="text" id="goal" >
 
         <label for="date">Date</label>
-        <input type="date" id="date" required>
+        <input type="date" id="date" >
 
         <div class="displayBtn">
           <button id="goalBtn" type="submit">Display Goals</button>
