add fixes for display allBtn

--- a/client/index.html
+++ b/client/index.html
@@ -14,17 +14,17 @@
         <br />
 
         <label for="name">Name</label>
-        <input type="text" id="name" >
+        <input type="text" id="name" />
 
         <label for="goal">Goal</label>
-        <input type="text" id="goal" >
+        <input type="text" id="goal" />
 
         <label for="date">Date</label>
-        <input type="date" id="date" >
+        <input type="date" id="date" />
 
         <div class="displayBtn">
-          <button id="goalBtn" type="submit">Display Goals</button>
-          <!-- <button>Display All Goals</button> -->
+          <button id="goalBtn" type="submit">Add or Display Goals</button>
+          <button id="allGoals">Display All Goals</button>
         </div>
       </form>
       <div class="formDisplay"></div>
@@ -34,10 +34,8 @@
     <button class="btnMargin" id="fortuneBtn">Get Fortune</button>
 
     <div class="displayFortune"></div>
-    <div class ="dogDisplay"></div>
+    <div class="dogDisplay"></div>
     <button class="doggy">Get Cute Dog Pics</button>
-
-    
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
