--- a/client/index.html
+++ b/client/index.html
@@ -23,8 +23,9 @@
         <input type="date" id="date" />
 
         <div class="displayBtn">
-          <button id="goalBtn" type="submit">Add or Display Goals</button>
+          <button id="goalBtn" type="submit">Add & Display Goals</button>
           <button id="allGoals">Display All Goals</button>
+          <button id ="updateBtn">Change Date</button>
         </div>
       </form>
       <div class="formDisplay"></div>
